fix: renaming collections_path to new standards

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ stdout_callback = yaml
 bin_ansible_callbacks = True
 VAULT_PASSWORD_FILE = /home/$USER/.ansible/vault_pass.txt
 inventory = ./inventory
-collections_paths = /home/$USER/lib:/home/$USER/.ansible/collections:/usr/share/ansible/collections
+collections_path = /home/$USER/lib:/home/$USER/.ansible/collections:/usr/share/ansible/collections
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ConnectTimeout=10 -i /home/$USER/.ssh/$USER
